icons supprimé class bi

--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -75,7 +75,7 @@
 				</h1>
         	</div>     	
         	<div class="col">
-				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover"
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
 					data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=#{aideessaimdspersionform}"></a>
 			</div>
