--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -58,10 +58,10 @@ $(document).ready(function() {
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/hausse/cree}"
-				  class="bi bi-plus-lg" th:title="#{ajouterHausse}" aria-hidden="true"></a>
+				  class="bi-plus-lg" th:title="#{ajouterHausse}" aria-hidden="true"></a>
 				&nbsp;
 				<a id="commentaire" href="#"
-				  class="selection bi bi-chat-text" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
+				  class="selection bi-chat-text" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
