--- a/src/main/resources/templates/recolte/recolteChoixHausses.html
+++ b/src/main/resources/templates/recolte/recolteChoixHausses.html
@@ -84,7 +84,7 @@
 			<div class="col">
 				<a
 					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3782_3476563104}"
-					class="bi bi-book" th:title="#{Doc}" target="_blank"
+					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a>
 			</div>
 		</div>
