--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -38,14 +38,14 @@
 				<h1 class="item" th:text="#{Recoltes}"></h1>
 			</div>
 			<div class="col">
-				<a id="cree" th:href="@{/recolte/cree}" class="bi bi-plus-lg"
+				<a id="cree" th:href="@{/recolte/cree}" class="bi-plus-lg"
 					th:title="#{ajouterRecolte}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{/recolte/statistiques/essaim}" class="bi bi-table"
+					th:href="@{/recolte/statistiques/essaim}" class="bi-table"
 					th:title="#{statistiquesessaims}" aria-hidden="true"></a> <a
-					th:href="@{/recolte/statprod}" class="bi bi-bar-chart"
+					th:href="@{/recolte/statprod}" class="bi-bar-chart"
 					th:title="#{statistiquesProd}" aria-hidden="true"></a> &nbsp;<a
 					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc1102_1613789997}"
-					class="bi bi-book" th:title="#{Doc}" target="_blank"
+					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a>
 			</div>
 		</div>
