--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -56,11 +56,11 @@
 				<h1 class="item" th:text="#{Ruches}"></h1>
 			</div>
 			<div class="col">
-				<a id="cree" th:href="@{/ruche/cree}" class="bi bi-plus-lg"
+				<a id="cree" th:href="@{/ruche/cree}" class="bi-plus-lg"
 					th:title="#{ajouterRuche}" aria-hidden="true"></a>
 				&nbsp;
 				<a id="commentaire" href="#"
-				  class="selection bi bi-chat-text" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
+				  class="selection bi-chat-text" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
