--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -46,17 +46,17 @@
        			<span class="padicons">
        				<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked/>
 				</span>
-				<span id="liste" class="liste bi bi-list-ul cursorpointer" th:title="#{listeRuchesOrdonnees}" aria-hidden="true"></span>
-		 		<span id="listeplus" class="liste bi bi-list-stars cursorpointer" th:title="#{listePlusRuchesOrdonnees}" aria-hidden="true"></span>					
-				<span id="export-gpx" class="bi bi-arrow-up-right-circle cursorpointer" th:title="#{exportGPX}"
+				<span id="liste" class="liste bi-list-ul cursorpointer" th:title="#{listeRuchesOrdonnees}" aria-hidden="true"></span>
+		 		<span id="listeplus" class="liste bi-list-stars cursorpointer" th:title="#{listePlusRuchesOrdonnees}" aria-hidden="true"></span>					
+				<span id="export-gpx" class="bi-arrow-up-right-circle cursorpointer" th:title="#{exportGPX}"
 					aria-hidden="true"></span>
 				<a id="gpx-download"></a>
-				<span id="export-kml" class="bi bi-arrow-up-right-square cursorpointer" th:title="#{exportKML}"
+				<span id="export-kml" class="bi-arrow-up-right-square cursorpointer" th:title="#{exportKML}"
 					aria-hidden="true"></span>
 				<a id="kml-download"></a>
-				<span id="parcours-redraw" class="bi bi-arrow-clockwise cursorpointer" th:title="#{parcoursRecalcul}"
+				<span id="parcours-redraw" class="bi-arrow-clockwise cursorpointer" th:title="#{parcoursRecalcul}"
 					aria-hidden="true"></span>
-				<span id="cercles" class="bi bi-wifi cursorpointer" aria-hidden="true"></span>
+				<span id="cercles" class="bi-wifi cursorpointer" aria-hidden="true"></span>
 			</div>
 		</div>
 	</div>
