--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -59,7 +59,7 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" role="button"
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=#{aiderucherdetailignmarkers}"></a>
 				&nbsp;
 		 		<input type="text" th:placeholder="#{recherche}" id="searchtext" />
@@ -67,20 +67,20 @@
        				<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked/>
 				</span>
 		 		<a th:href="@{'/rucher/rapproche/Ign/'+${rucher.id}}"
-		 		  class="rapproche bi bi-arrows-angle-contract" th:title="#{rapprocher}" aria-hidden="true">
+		 		  class="rapproche bi-arrows-angle-contract" th:title="#{rapprocher}" aria-hidden="true">
        			</a>
-       			<span id="liste" class="liste bi bi-list-ul cursorpointer" th:title="#{listeRuchesOrdonnees}" aria-hidden="true"></span>
-		 		<span id="listeplus" class="liste bi bi-list-stars cursorpointer" th:title="#{listePlusRuchesOrdonnees}" aria-hidden="true"></span>
-				<span id="export-gpx" class="bi bi-arrow-up-right-circle cursorpointer" th:title="#{exportGPX}"
+       			<span id="liste" class="liste bi-list-ul cursorpointer" th:title="#{listeRuchesOrdonnees}" aria-hidden="true"></span>
+		 		<span id="listeplus" class="liste bi-list-stars cursorpointer" th:title="#{listePlusRuchesOrdonnees}" aria-hidden="true"></span>
+				<span id="export-gpx" class="bi-arrow-up-right-circle cursorpointer" th:title="#{exportGPX}"
 					aria-hidden="true"></span>
 				<a id="gpx-download"></a>
-				<span id="export-kml" class="bi bi-arrow-up-right-square cursorpointer" th:title="#{exportKML}"
+				<span id="export-kml" class="bi-arrow-up-right-square cursorpointer" th:title="#{exportKML}"
 					aria-hidden="true"></span>
 				<a id="kml-download"></a>
-				<span id="parcours-redraw" class="bi bi-arrow-clockwise cursorpointer" th:title="#{parcoursRecalcul}"
+				<span id="parcours-redraw" class="bi-arrow-clockwise cursorpointer" th:title="#{parcoursRecalcul}"
 					aria-hidden="true"></span>
 				&nbsp;	
-				<span id="geoloc" class="bi bi-geo-alt cursorpointer" th:title="'Géolocalisation'"
+				<span id="geoloc" class="bi-geo-alt cursorpointer" th:title="'Géolocalisation'"
 					aria-hidden="true"></span>
 			</div>
 		</div>
