--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -37,17 +37,17 @@
 				<h1 class="item" th:text="#{Ruchers}"></h1>
 			</div>
 			<div class="col">
-				<a id="cree" th:href="@{/rucher/cree}" class="bi bi-plus-lg"
+				<a id="cree" th:href="@{/rucher/cree}" class="bi-plus-lg"
 					th:title="#{ajouterRucher}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{/rucher/Gg/}" class="bi bi-google" th:title="#{carteGg}"
+					th:href="@{/rucher/Gg/}" class="bi-google" th:title="#{carteGg}"
 					aria-hidden="true"></a> <a th:href="@{'/rucher/Ign/'}"
 					th:title="#{carteIgn}" aria-hidden="true"><img
 					th:src="@{'/images/france.svg'}" style="margin-bottom: 2px;" /></a> <a
-					th:href="@{/rucher/Osm/}" class="bi bi-globe"
+					th:href="@{/rucher/Osm/}" class="bi-globe"
 					th:title="#{carteOsm}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{/rucher/statistiques}" class="bi bi-table"
+					th:href="@{/rucher/statistiques}" class="bi-table"
 					th:title="#{statistiquesruchers}" aria-hidden="true"></a> &nbsp; <a
-					th:href="@{'/rucher/historiques/true'}" class="bi bi-truck-front"
+					th:href="@{'/rucher/historiques/true'}" class="bi-truck-front"
 					th:title="#{transhumances}" aria-hidden="true"></a>
 			</div>
 		</div>
