--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -42,14 +42,14 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" role="button"
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=#{aiderucherlisteignmarkers}"></a>
 				<input type="text" th:placeholder="#{recherche}" id="searchtext"/>
 				<span class="padicons">
        				<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked/>
 				</span>
 				<a th:href="@{/rucher/recentre}"
-				  class="recentre bi bi-dice-1" th:title="#{recentrer}" aria-hidden="true">
+				  class="recentre bi-dice-1" th:title="#{recentrer}" aria-hidden="true">
        			</a>
 			</div>		
 		</div>
