--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -64,19 +64,19 @@ $(document).ready(function() {
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/essaim/cree}"
-				  class="bi bi-plus-lg" th:title="#{ajouterEssaim}" aria-hidden="true"></a>
+				  class="bi-plus-lg" th:title="#{ajouterEssaim}" aria-hidden="true"></a>
        			&nbsp;	
        			<a id="commentaire" href="#"
-				  class="selection bi bi-chat-text" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
+				  class="selection bi-chat-text" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
 				<a id="sucre" href="#"
-				  class="selection bi bi-bucket" th:title="#{evenementsSucre}" aria-hidden="true"></a>
+				  class="selection bi-bucket" th:title="#{evenementsSucre}" aria-hidden="true"></a>
 				 <a id="traitement" href="#"
-					class="selection bi bi-bug" th:title="#{evenementsTraitement}" aria-hidden="true"></a>
+					class="selection bi-bug" th:title="#{evenementsTraitement}" aria-hidden="true"></a>
 				&nbsp;
 				<a th:href="@{/essaim/statistiques}"
-				  class="bi bi-table" th:title="#{statistiquesproduction}" aria-hidden="true"></a>
+				  class="bi-table" th:title="#{statistiquesproduction}" aria-hidden="true"></a>
 				<a th:href="@{/essaim/statistiquesage}"
-				  class="bi bi-bar-chart" th:title="#{statistiquesage}" aria-hidden="true"></a>
+				  class="bi-bar-chart" th:title="#{statistiquesage}" aria-hidden="true"></a>
         	</div>
         </div>
     </div>
