--- a/src/main/resources/templates/evenement/evenementCadreDetail.html
+++ b/src/main/resources/templates/evenement/evenementCadreDetail.html
@@ -31,14 +31,14 @@
 			</div>
 			<div class="col">
 				<a th:href="@{'/evenement/ruche/cadre/modifie/'+${evenement.id}}">
-					<span class="bi bi-pencil" th:title="#{modifier}"
+					<span class="bi-pencil" th:title="#{modifier}"
 					aria-hidden="true"></span>
 				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
-					class="bi bi-pencil" style="color: red" th:title="#{modifierTout}"
+					class="bi-pencil" style="color: red" th:title="#{modifierTout}"
 					aria-hidden="true"></span>
 				</a><a id="supprime"
 					th:href="@{'/evenement/supprime/'+${evenement.id}}"><span
-					class="confirmation bi bi-trash" style="color: red"
+					class="confirmation bi-trash" style="color: red"
 					th:title="#{supprimer}" aria-hidden="true"></span>
 				</a>
 			</div>
