--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -48,7 +48,7 @@
 				<h1 class="item" th:text="#{Notifications}"></h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover"
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
 					data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=${dests}"></a>
 				<span class="padicons">
