--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -33,9 +33,9 @@ $().ready(function() {
 			</div>
 			<div class="col">
 				<a th:href="@{'/personne/modifie/'+${personne.id}}"
-				 class="bi bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
+				 class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
 			    <a id="supprime" th:href="@{'/personne/supprime/'+${personne.id}}"
-			      class="confirmation bi bi-trash" th:title="#{supprimer}" 
+			      class="confirmation bi-trash" th:title="#{supprimer}" 
 			      style="color:red" aria-hidden="true"></a>
 			</div>
 		</div>
