--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -56,7 +56,7 @@
 			<div class="col">
 				<a
 					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3543_3352760186}"
-					class="bi bi-book" th:title="#{Doc}" target="_blank"
+					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a>
 			</div>
 		</div>
