--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -29,7 +29,7 @@
 			<div class="col">
 				<a
 					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3834_3476563104}"
-					class="bi bi-book" th:title="#{Doc}" target="_blank"
+					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a> <span class="padicons"> <input
 					type="checkbox" id="groupe" th:title="#{grouper}"
 					th:checked="${group}" /> <label for="groupe" th:text="#{grouper}"></label>
