--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="col">
 				<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc4457_1171085051}"
-				  class="bi bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+				  class="bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
