--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
 	<div class="logout"
 		sec:authorize="isAuthenticated()">
 		<span th:text="#{connecte}"></span> : <span id="login" sec:authentication="name"></span>
-		| <span th:text="#{roles}"></span> : <span id="role" sec:authentication="principal.authorities"></span>
+		| <span th:text="#{roles}"></span> : <span id="role" 
+		th:text="${#authentication.getAuthorities()[0].getAuthority().equals('ROLE_')?'Aucun':'Admin'}"></span>
 		<div>
 			<form action="#" th:action="@{/logout}" method="post">
 				<input type="submit" th:value="#{deconnexion}" />
