"Cet essaim n'est pas dans une ruche" si dispersion ou essaimage.

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -11,7 +11,7 @@
 	const recolteHausses = /*[[${recolteHausses}]]*/null;
 	const rucheEssaim = /*[[${rucheEssaim}]]*/null;
 	const PasDeRuche = /*[[${PasDeRuche}]]*/null;
-	const pasderuchetxt = /*[[#{PasDeRuche}]]*/null;
+	const pasderuchetxt = /*[[#{essaimPasRuche}]]*/null;
 	const essaimsupprecolttxt = /*[[#{essaimsupprimerecolte}]]*/null;
 	const suppessaimevetxt = /*[[#{supprimeressaimevenements}]]*/null;
 	const suppessaimtxt = /*[[#{supprimeressaim}]]*/null;
