--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -4,29 +4,27 @@
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatepicker-fr"></script>
 <script th:inline="javascript">
+	const rucheNoms = /*[[${rucheNoms}]]*/null;
+	const nomexiste = /*[[#{nomexiste}]]*/null;
 	$().ready(function() {
 		$("#nom").focus();
-		jQuery.validator.addMethod("nomExiste", function(value) {   
-    		return $.inArray(value, [[${rucheNoms}]]) == -1;
-			}, [[#{nomexiste}]]);
+		jQuery.validator.addMethod("nomExiste", function(value) {
+			return $.inArray(value, rucheNoms) == -1;
+		}, nomexiste);
 		if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
-			$.datepicker.setDefaults(
-				$.datepicker.regional['fr']
-			);
+			$.datepicker.setDefaults($.datepicker.regional['fr']);
 		} else {
-			$.datepicker.setDefaults(
-					$.datepicker.regional['en']
-				);
+			$.datepicker.setDefaults($.datepicker.regional['en']);
 		}
 		$.datepicker.setDefaults({
 			dateFormat : 'yy-mm-dd',
-			changeYear: true
+			changeYear : true
 		});
 		$("#dateAcquisition").datepicker();
 		$("#rucheForm").validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
+			errorClass : 'erreur-form',
+			errorPlacement : function(error, element) {
+				error.insertBefore(element.closest('div'));
 			},
 			rules : {
 				nom : {
@@ -59,7 +57,7 @@
 				<h1 class="item" th:if="${ruche.id}">
 					<th:block th:text="#{modification}"></th:block>
 					<a th:href="@{'/ruche/'+${ruche.id}}"
-					th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 				</h1>
 			</div>
 		</div>
@@ -71,18 +69,16 @@
 		<div th:replace="includeForm :: nomField"></div>
 		<div th:replace="includeForm :: activeField"></div>
 		<div class="form-floating mb-3">
-			<input class="form-control" placeholder="15.000"
-				type="number" step="0.001" min="0" max="80"
-				th:field="*{poidsVide}" th:errorclass="fieldError" />
-			<label class="form-label" for="poidsVide" th:text="#{poidskg}"></label>
+			<input class="form-control" placeholder="15.000" type="number"
+				step="0.001" min="0" max="80" th:field="*{poidsVide}"
+				th:errorclass="fieldError" /> <label class="form-label"
+				for="poidsVide" th:text="#{poidskg}"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<select
-				class="form-control" th:field="*{type}">
+			<select class="form-control" th:field="*{type}">
 				<option th:each="type : ${rucheTypes}" th:value="${type.id}"
 					th:text="${type.nom}"></option>
-			</select>
-			<label class="form-label" for="type" th:text="#{type}"></label> 
+			</select> <label class="form-label" for="type" th:text="#{type}"></label>
 		</div>
 		<div th:replace="includeForm :: dateAcquisitionField"></div>
 		<div th:replace="includeForm :: latitudeField"></div>
