--- a/src/main/resources/templates/ruche/rucheTypeForm.html
+++ b/src/main/resources/templates/ruche/rucheTypeForm.html
@@ -3,15 +3,17 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+	const rucheTypeNoms = /*[[${rucheTypeNoms}]]*/null;
+	const nomexiste = /*[[#{nomexiste}]]*/null;
 	$().ready(function() {
 		$("#nom").focus();
-		jQuery.validator.addMethod("nomExiste", function(value) {   
-    		return $.inArray(value, [[${rucheTypeNoms}]]) == -1;
-			}, [[#{nomexiste}]]);
+		jQuery.validator.addMethod("nomExiste", function(value) {
+			return $.inArray(value, rucheTypeNoms) == -1;
+		}, nomexiste);
 		$("#rucheTypeForm").validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
+			errorClass : 'erreur-form',
+			errorPlacement : function(error, element) {
+				error.insertBefore(element.closest('div'));
 			},
 			rules : {
 				nom : {
@@ -41,8 +43,7 @@
 				</h1>
 				<h1 class="item" th:if="${rucheType.id}">
 					<th:block th:text="#{modification}"></th:block>
-					<a th:href="@{/rucheType/liste}"
-					th:text="#{rucheType}"></a>
+					<a th:href="@{/rucheType/liste}" th:text="#{rucheType}"></a>
 					<th:block th:text="' ' + ${rucheType.nom}"></th:block>
 				</h1>
 			</div>
@@ -53,10 +54,10 @@
 		<input type="hidden" th:field="*{id}" />
 		<div th:replace="includeForm :: nomField"></div>
 		<div class="form-floating mb-3">
-			<input placeholder=""
-				class="form-control" type="number" th:field="*{nbCadresMax}"
-				th:errorclass="fieldError" id="nbCadresMax" name="nbCadresMax" />
-			<label class="form-label" for="nbCadresMax" th:text="#{nbCadresMax}"></label>
+			<input placeholder="" class="form-control" type="number"
+				th:field="*{nbCadresMax}" th:errorclass="fieldError"
+				id="nbCadresMax" name="nbCadresMax" /> <label class="form-label"
+				for="nbCadresMax" th:text="#{nbCadresMax}"></label>
 		</div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
