--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -208,9 +208,9 @@
 		</div>
 	</nav>
 	<footer th:fragment="footer">
-		<small th:text="#{include.footer} + ' Version ' + ${buildTime}"></small>
+		<small th:utext="${'&#128029; ' + @environment.getProperty('accueil.titre') + ' &#128029; '} +
+		#{include.footer} + ' ' + ${buildTime}"></small>
 	</footer>
-
 	<img th:fragment="pencil"
 		th:src="@{'/images/bootstrap-icons-1.10.2/pencil.svg'}" width="16"
 		height="16">
