--- a/src/main/resources/static/css/ruches.css
+++ b/src/main/resources/static/css/ruches.css
@@ -1,3 +1,10 @@
+footer {
+	padding-top: 0.2em;
+	padding-left: 0.4em;
+	font-size:0.8em;
+	line-height: 0.5em;
+}
+
 .form-control {
 	background-color: LemonChiffon;
 }
