--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
+<link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:inline="javascript">
+	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
+	const dateFirst = /*[[${dateFirst}]]*/null;
+	const timeFirst = /*[[${timeFirst}]]*/null;
 	$().ready(function() {
 		$.validator.addMethod( "greaterThanEqual", function( value, element, param ) {
 			return $('#depot').is(":checked") ? (Date.parse(value) > Date.parse(param)) : true;
-		}, [[#{doitEtreSupA}]] + ' {0}');
+		}, doitEtreSupA + ' {0}');
 	    $('.bi-question-lg').popover({
 	        html: true
 	    });
@@ -24,7 +28,7 @@
 			rules : {
 				date : {
 					required : true,
-					greaterThanEqual : [[${dateFirst}]] + ' ' + [[${timeFirst}]]
+					greaterThanEqual : dateFirst + ' ' + timeFirst
 				},
 				commentaire : {
 					maxlength : 255
@@ -32,14 +36,14 @@
 			}
 		});
 		$('#date').datetimepicker({
-			minDate: [[${dateFirst}]],
-			minTime: [[${timeFirst}]]
+			minDate: dateFirst,
+			minTime: timeFirst
 		});
 		function depotOnChange() {
 			const isChk =  $('#depot').is(":checked");
 			$('#date').datetimepicker({
-				minDate: isChk ? [[${dateFirst}]] : false,
-				minTime: isChk ? [[${timeFirst}]] : false
+				minDate: isChk ? dateFirst : false,
+				minTime: isChk ? timeFirst : false
 			});
 		}
 		$('#depot').on('change', depotOnChange);
@@ -69,49 +73,48 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				<th:block th:text="#{dispersion} + ' '"></th:block>
-				  <a th:href="@{'/essaim/'+${essaimId}}"
-					th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
+					<th:block th:text="#{dispersion} + ' '"></th:block>
+					<a th:href="@{'/essaim/'+${essaimId}}"
+						th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
 				</h1>
-        	</div>     	
-        	<div class="col">
+			</div>
+			<div class="col">
 				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
 					data-bs-trigger="focus" tabindex="0" role="button"
 					th:attr="data-bs-content=#{aideessaimdspersionform}"></a>
 			</div>
-        </div>
-        <div class="row">
+		</div>
+		<div class="row">
 			<div class="col">
-				<p th:text="#{rucheAjouteeAuRucher(${ruche.nom},${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
-		        </p>
-		    </div>
-        </div>
-    </div>
-    <form action="#" th:action="@{'/evenement/essaim/sauve/dispersion/'+${essaim.id}}"
-		method="post" id="evenementForm">		
+				<p
+					th:text="#{rucheAjouteeAuRucher(${ruche.nom},${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
+				</p>
+			</div>
+		</div>
+	</div>
+	<form action="#"
+		th:action="@{'/evenement/essaim/sauve/dispersion/'+${essaim.id}}"
+		method="post" id="evenementForm">
 		<div class="form-check">
 			<input class="form-check-input" type="checkbox" id="depot"
-				name="depot" checked /> 
-			<label class="form-check-label"
-				for="depot" th:text="#{retourrucheaudepot}"></label>
+				name="depot" checked /> <label class="form-check-label" for="depot"
+				th:text="#{retourrucheaudepot}"></label>
 		</div>
 		<div id="divevencadre" class="form-check">
 			<input class="form-check-input" type="checkbox" id="evencadre"
-				name="evencadre" checked /> 
-			<label class="form-check-label"
+				name="evencadre" checked /> <label class="form-check-label"
 				for="evencadre" th:text="#{creationevecadrezero}"></label>
 		</div>
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
 		<th:block th:if="${nomRuche}">
 			<div class="form-floating mb-3">
-				<select
-					class="form-control" id="remerageId" name="remerageId">
+				<select class="form-control" id="remerageId" name="remerageId">
 					<option th:text="#{aucun}" value=""></option>
-					<option th:each="essaimopt : ${essaimsRemerage}" th:value="${essaimopt[0]}"
-						th:text="${essaimopt[1]}"></option>
-				</select>
-				<label class="form-label" for="remerageId" th:text="#{nouvellereine} + ' ' + ${nomRuche}"></label>
+					<option th:each="essaimopt : ${essaimsRemerage}"
+						th:value="${essaimopt[0]}" th:text="${essaimopt[1]}"></option>
+				</select> <label class="form-label" for="remerageId"
+					th:text="#{nouvellereine} + ' ' + ${nomRuche}"></label>
 			</div>
 		</th:block>
 		<div th:replace="includeForm :: BtnForm"></div>
