rucher détail carto ign et osm améliorations javascript

--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -37,6 +37,10 @@
 	const _csrf_token = /*[[${_csrf.token}]]*/ null;
 	const dessinEnregistretxt = /*[[#{dessinEnregistre}]]*/ null;
 	const ignCarteLiscense = /*[[${ignCarteLiscense}]]*/ null;
+	
+	const distRuchesOk = /*[[#{distRuchesOk}]]*/ null;
+	const distMaxRuche = /*[[${distMaxRuche}]]*/ null;
+	
 	window.onload = function () {
  		rucherDetail(true); 			
 	}
