--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -37,6 +37,10 @@
 	const ruchesurl = /*[[@{/}]]*/ null;
 	const _csrf_token = /*[[${_csrf.token}]]*/ null;
 	const dessinEnregistretxt = /*[[#{dessinEnregistre}]]*/ null;
+	
+	const distRuchesOk = /*[[#{distRuchesOk}]]*/ null;
+	const distMaxRuche = /*[[${distMaxRuche}]]*/ null;
+	
 	window.onload = function () {
  		rucherDetail(false);
 	}
