rucherDetailIgn et Osm, rapprocher donne les noms des ruches éloignées

--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -19,7 +19,7 @@
 	const ruches = /*[[${ruches}]]*/ null;
 	const rucher = /*[[${rucher}]]*/ null;
 	const nomHausses = /*[[${hausseNoms}]]*/ null;
-	const rapprochertxt = /*[[#{rapprocher?}]]*/ null;
+	const rapprochertxt = /*[[#{rapprocher}]]*/ null;
 	const pleinecran = /*[[#{pleinecran}]]*/ null;
 	const lesRuches = /*[[#{Ruches}]]*/ null;
 	const couchemarqueursruches = /*[[#{couchemarqueursruches}]]*/ null;
