css bouton "reset rotation" modifiées pour affichage à gauche

--- a/src/main/resources/static/css/ruches.css
+++ b/src/main/resources/static/css/ruches.css
@@ -5,6 +5,11 @@ footer {
 	line-height: 0.5em;
 }
 
+.ol-rotate {
+    top: 6.5em !important;
+    left: .5em !important;
+}
+
 .form-control {
 	background-color: LemonChiffon;
 }
