--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -2,6 +2,46 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<script th:inline="javascript">
+	const rucheTypeNom = /*[[${rucheType.nom}]]*/null;
+	const rucheTypetxt = /*[[#{rucheType}]]*/null;
+	const listeRuches = /*[[#{listeRuches}]]*/null;
+	const buttontextprint = /*[[#{buttontextprint}]]*/null;
+	const buttontextcol = /*[[#{buttontextcol}]]*/null;
+	const nbRuchesTotal = /*[[${nbRuchesTotal}]]*/null;
+	const suppTypeRuche = /*[[#{suppTypeRuche}]]*/null;
+	const typeRucheSuppNon = /*[[#{typeRucheSuppNon}]]*/null;
+	$().ready(
+			function() {
+				$('.confirmationsupp').on('click', function() {
+					if (nbRuchesTotal != "0") {
+						alert(typeRucheSuppNon);
+						return false;
+					} else {
+						return confirm(suppTypeRuche);
+					}
+				});
+				new DataTable('#ruches', {
+					dom : '<"buttonsData" Blf>t<"buttonsData" ip>',
+					buttons : [
+							'csv',
+							{
+								extend : 'pdf',
+								exportOptions : {
+									columns : ':visible'
+								},
+								title : rucheTypetxt + ' : ' + rucheTypeNom + ' - ' + listeRuches + " "
+										+ (new Date()).toLocaleDateString()
+							}, {
+								extend : 'print',
+								text : buttontextprint
+							}, {
+								extend : 'colvis',
+								text : buttontextcol
+							} ]
+				});
+			});
+</script>
 </head>
 <body>
 	<nav th:replace="include :: navbar"></nav>
@@ -18,7 +58,10 @@
 			</div>
 			<div class="col">
 				<a th:href="@{'/rucheType/modifie/'+${rucheType.id}}"
-					class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
+					class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></a> <a
+					id="supprime" th:href="@{'/rucheType/supprime/'+${rucheType.id}}"
+					class="confirmationsupp bi-trash" style="color: red"
+					th:title="#{supprimer}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -34,18 +77,13 @@
 				<tr>
 					<td th:text="${rucheType.nom}"></td>
 					<td class="num" th:text="${rucheType.nbCadresMax}"></td>
-
-					<!-- et production
-					<td th:text="${ruche.commentaire}"></td>
-					 -->
-
 				</tr>
 			</tbody>
 		</table>
 
 		<h6 th:unless="${#arrays.length(ruches)}" th:text="#{PasDeRuche}"></h6>
 		<th:block th:if="${#arrays.length(ruches)}">
-			<h6	th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
+			<h6 th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
 			<table class="table table-sm table-bordered table-striped"
 				id="ruches">
 				<thead>
@@ -55,18 +93,8 @@
 						<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 						<th th:text="#{dateAcquisition}"></th>
 						<th class="num" th:text="#{poidsVide}"></th>
-						
-						<!-- 
-						<th class="num" th:text="#{nbCadres}"></th>
-						-->
-						
 						<th style="background-color: PaleGoldenRod" class="num"
 							th:text="#{nbCadresMax}"></th>
-						
-						<!-- 
-						<th th:text="#{Hausses}"></th>
-						-->
-						
 						<th th:text="#{commentaire}"></th>
 					</tr>
 				</thead>
@@ -81,24 +109,14 @@
 						<td th:text="${ruche.dateAcquisition}"></td>
 						<td class="num"
 							th:text="${#numbers.formatDecimal(ruche.poidsVide,1,2,'DEFAULT')}"></td>
-						
-						<!-- 	
-						<td class="num" th:text="${nbCadres[rucheStat.index]}"></td>
-						 -->
-						
 						<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
-						
-						<!-- 
-						<td class="num" th:text="${listNbHausses[rucheStat.index]}"></td>
-						-->
-						
 						<td th:text="${ruche.commentaire}"></td>
 					</tr>
 				</tbody>
 			</table>
 		</th:block>
 	</div>
-	<br/>
+	<br />
 	<footer th:replace="include::footer"></footer>
 </body>
 </html>
