Ajout du champ commentaire à rucheType. Attention modifie la BD. Ajouter le champ commentaire à la table ruches_type : alter table ruche_type add column commentaire character varying(255);

--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -71,12 +71,14 @@
 				<tr>
 					<th th:text="#{nom}"></th>
 					<th th:text="#{nbCadresMax}"></th>
+					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td th:text="${rucheType.nom}"></td>
 					<td class="num" th:text="${rucheType.nbCadresMax}"></td>
+					<td th:text="${rucheType.commentaire}"></td>
 				</tr>
 			</tbody>
 		</table>
