--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 const _csrf_token = /*[[${_csrf.token}]]*/ null;
 const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
@@ -79,138 +80,151 @@ $().ready(function() {
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/ruche/modifie/'+${ruche.id}}"
-				  class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
-				&nbsp;
-        		<span id="clone" class="bi-collection cursorpointer" th:title="#{cloner}" aria-hidden="true"></span>
-				<a th:href="@{'/ruche/hausses/'+${ruche.id}}"
-				  class="bi-justify" th:title="#{ajoutRetraitHausses}" aria-hidden="true"></a>
-       			<a th:href="@{'/ruche/rucher/'+${ruche.id}}"
-       			  class="bi-house" th:title="#{changerDeRucher}" aria-hidden="true"></a>
-				<a id="supprime" th:href="@{'/ruche/supprime/'+${ruche.id}}"
-				  class="confirmation bi-trash" style="color:red" th:title="#{supprimer}" aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{'/evenement/ruche/'+${ruche.id}}"
-				  class="padicons bi-list-ul" th:title="#{evenements}" aria-hidden="true"></a>
-				<a th:href="@{'/evenement/ruche/commentaire/cree/'+${ruche.id}}"
-				  class="bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a>
-				&nbsp;
-				<a th:href="@{'/ruche/historique/'+${ruche.id}}"
-				  class="bi-calendar-check" th:title="#{histoHausses}" aria-hidden="true"></a>
-        	</div>
-        </div>
-    </div>
+				<a th:href="@{'/ruche/modifie/'+${ruche.id}}" class="bi-pencil"
+					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <span
+					id="clone" class="bi-collection cursorpointer" th:title="#{cloner}"
+					aria-hidden="true"></span> <a
+					th:href="@{'/ruche/hausses/'+${ruche.id}}" class="bi-justify"
+					th:title="#{ajoutRetraitHausses}" aria-hidden="true"></a> <a
+					th:href="@{'/ruche/rucher/'+${ruche.id}}" class="bi-house"
+					th:title="#{changerDeRucher}" aria-hidden="true"></a> <a
+					id="supprime" th:href="@{'/ruche/supprime/'+${ruche.id}}"
+					class="confirmation bi-trash" style="color: red"
+					th:title="#{supprimer}" aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/evenement/ruche/'+${ruche.id}}"
+					class="padicons bi-list-ul" th:title="#{evenements}"
+					aria-hidden="true"></a> <a
+					th:href="@{'/evenement/ruche/commentaire/cree/'+${ruche.id}}"
+					class="bi-chat-text" th:title="#{evenementCommentaire}"
+					aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/ruche/historique/'+${ruche.id}}"
+					class="bi-calendar-check" th:title="#{histoHausses}"
+					aria-hidden="true"></a>
+			</div>
+		</div>
+	</div>
 	<div class="container-fluid table-responsive" id="ruche">
-		<table class="table table-sm table-bordered">			
-		<thead>
-			<tr>
-				<th th:if="${session.voirInactif}" th:text="#{active}"></th>
-				<th th:text="#{dateAcquisition}"></th>
-				<th th:text="#{poidsVide}"></th>
-				<th th:text="#{nbCadresMax}"></th>
-				<th th:text="#{type}"></th>
-				<th style="background-color:LemonChiffon" th:text="#{latitude}"></th>
-				<th style="background-color:LemonChiffon" th:text="#{longitude}"></th>
-				<th th:text="#{commentaire}"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td th:if="${session.voirInactif}" th:text="${ruche.active}? #{oui} : #{non}"></td>
-				<td th:text="${ruche.dateAcquisition}"></td>
-				<td class="num" th:text="${#numbers.formatDecimal(ruche.poidsVide,1,2,'DEFAULT')}"></td>
-				<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
-				<td th:text="${ruche.type?.nom}"></td>
-				<td class="num" th:text="${#numbers.formatDecimal(ruche.latitude,1,4)}"></td>
-				<td class="num" th:text="${#numbers.formatDecimal(ruche.longitude,1,4)}"></td>
-				<td th:text="${ruche.commentaire}"></td>				
-			</tr>
-		</tbody>
-	</table>
-	<table class="table table-sm table-bordered">			
-		<thead>
-			<tr>
-				<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-				<th style="background-color:PaleGoldenRod" th:text="#{date}"></th>
-				<th style="background-color:PaleGoldenRod" th:text="#{commentaire}"></th>
-				<th style="background-color:LemonChiffon" th:text="#{essaim}"></th>
-				<th style="background-color:LemonChiffon" th:text="#{date}"></th>
-				<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td><a th:href="@{'/rucher/'+${ruche.rucher?.id}}"
-					th:text="${ruche.rucher?.nom}"></a></td>
-				<td><a 
-						th:href="@{'/evenement/'+${eveRucher?.id}+'?type=ruche'}"
-						th:text="${#temporals.format(eveRucher?.date, 'yyyy/MM/dd')}"></a>
-					</td>
-				<td th:text="${eveRucher?.commentaire}"></td>
-				<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}"
-					th:text="${ruche.essaim?.nom}"></a></td>
-				<td><a th:if="${eveEssaim != null}"
-						th:href="@{'/evenement/'+${eveEssaim?.id}+'?type=ruche'}"
-						th:text="${#temporals.format(eveEssaim?.date, 'yyyy/MM/dd')}"></a>
-					</td>
-				<td th:text="${eveEssaim?.commentaire}"></td>
-			</tr>
-		</tbody>
-	</table>
-	<th:block th:if="${eveComm != null}">
-		<h6 th:text="#{evenements}" ></h6>
-	<table class="table table-sm table-bordered">			
-		<thead>
-			<tr>
-				<th style="background-color:PaleGoldenRod" th:text="#{commentaire}"></th>
-				<th style="background-color:PaleGoldenRod" th:text="#{date}"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td th:text="${eveComm?.commentaire}"></td>
-				<td><a th:if="${eveComm != null}"
-						th:href="@{'/evenement/'+${eveComm?.id}+'?type=ruche'}"
-						th:text="${#temporals.format(eveComm?.date, 'yyyy/MM/dd')}"></a>
-					</td>
-			</tr>
-		</tbody>
-	</table>
-	</th:block>
-	<h6 th:if="${#lists.isEmpty(haussesRuche)}" th:text="#{Pasdehausse}"></h6>
-	<th:block th:if="${not #lists.isEmpty(haussesRuche)}">
-		<h6 th:text="#{listeHausses}" ></h6>
-		<table class="table table-sm table-bordered">			
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
-					<th th:text="#{nom}"></th>
-					<th th:text="#{Ordre}"></th>
-					<th>Date pose</th>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
 					<th th:text="#{poidsVide}"></th>
-					<th th:text="#{nbCadres}"></th>
 					<th th:text="#{nbCadresMax}"></th>
+					<th th:text="#{type}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="hausseRuche : ${haussesRuche}">
-					<td><a href="/retraitHausse"
-						th:href="@{'/hausse/'+${hausseRuche.id}}"
-						th:text="${hausseRuche.nom}"></a></td>
-					<td th:text="${hausseRuche.ordreSurRuche}"></td>
-					<td th:text="${#temporals.format( datesPoseHausse[hausseRucheStat.index] , 'yyyy/MM/dd')}">
-					</td>
-					<td th:if="${session.voirInactif}" th:text="${hausseRuche.active}? #{oui} : #{non}"></td>
-					<td th:text="${hausseRuche.dateAcquisition}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(hausseRuche.poidsVide,1,1,'DEFAULT')}"></td>
-					<td class="num" th:text="${hausseRuche.nbCadres}"></td>
-					<td class="num" th:text="${hausseRuche.nbCadresMax}"></td>
-					<td th:text="${hausseRuche.commentaire}"></td>			
+				<tr>
+					<td th:if="${session.voirInactif}"
+						th:text="${ruche.active}? #{oui} : #{non}"></td>
+					<td th:text="${ruche.dateAcquisition}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(ruche.poidsVide,1,2,'DEFAULT')}"></td>
+					<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
+					<td><a th:href="@{/rucheType/{id}(id=${ruche.type?.id})}"
+						th:text="${ruche.type?.nom}"></a></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(ruche.latitude,1,4)}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(ruche.longitude,1,4)}"></td>
+					<td th:text="${ruche.commentaire}"></td>
 				</tr>
 			</tbody>
 		</table>
+		<table class="table table-sm table-bordered">
+			<thead>
+				<tr>
+					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
+					<th style="background-color: PaleGoldenRod"
+						th:text="#{commentaire}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{essaim}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{date}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><a th:href="@{/rucher/{id}(id=${ruche.rucher?.id})}"
+						th:text="${ruche.rucher?.nom}"></a></td>
+					<td><a
+					 	th:href="@{/evenement/{id}?type=ruche(id=${eveRucher?.id})}"
+						th:text="${#temporals.format(eveRucher?.date, 'yyyy/MM/dd')}"></a>
+					</td>
+					<td th:text="${eveRucher?.commentaire}"></td>
+					<td><a 
+						th:href="@{/essaim/{id}(id=${ruche.essaim?.id})}"
+						th:text="${ruche.essaim?.nom}"></a></td>
+					<td><a th:if="${eveEssaim != null}"
+						th:href="@{/evenement/{id}?type=ruche(id=${eveEssaim?.id})}"
+						th:text="${#temporals.format(eveEssaim?.date, 'yyyy/MM/dd')}"></a>
+					</td>
+					<td th:text="${eveEssaim?.commentaire}"></td>
+				</tr>
+			</tbody>
+		</table>
+		<th:block th:if="${eveComm != null}">
+			<h6 th:text="#{evenements}"></h6>
+			<table class="table table-sm table-bordered">
+				<thead>
+					<tr>
+						<th style="background-color: PaleGoldenRod"
+							th:text="#{commentaire}"></th>
+						<th style="background-color: PaleGoldenRod" th:text="#{date}"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td th:text="${eveComm?.commentaire}"></td>
+						<td><a th:if="${eveComm != null}"
+							th:href="@{/evenement/{id}?type=ruche(id=${eveComm?.id})}"
+							th:text="${#temporals.format(eveComm?.date, 'yyyy/MM/dd')}"></a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</th:block>
+		<h6 th:if="${#lists.isEmpty(haussesRuche)}" th:text="#{Pasdehausse}"></h6>
+		<th:block th:if="${not #lists.isEmpty(haussesRuche)}">
+			<h6 th:text="#{listeHausses}"></h6>
+			<table class="table table-sm table-bordered">
+				<thead>
+					<tr>
+						<th th:text="#{nom}"></th>
+						<th th:text="#{Ordre}"></th>
+						<th>Date pose</th>
+						<th th:if="${session.voirInactif}" th:text="#{active}"></th>
+						<th th:text="#{dateAcquisition}"></th>
+						<th th:text="#{poidsVide}"></th>
+						<th th:text="#{nbCadres}"></th>
+						<th th:text="#{nbCadresMax}"></th>
+						<th th:text="#{commentaire}"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="hausseRuche : ${haussesRuche}">
+						<td><a href="/retraitHausse"
+							th:href="@{/hausse/{id}(id=${hausseRuche.id})}"
+							th:text="${hausseRuche.nom}"></a></td>
+						<td th:text="${hausseRuche.ordreSurRuche}"></td>
+						<td
+							th:text="${#temporals.format( datesPoseHausse[hausseRucheStat.index] , 'yyyy/MM/dd')}">
+						</td>
+						<td th:if="${session.voirInactif}"
+							th:text="${hausseRuche.active}? #{oui} : #{non}"></td>
+						<td th:text="${hausseRuche.dateAcquisition}"></td>
+						<td class="num"
+							th:text="${#numbers.formatDecimal(hausseRuche.poidsVide,1,1,'DEFAULT')}"></td>
+						<td class="num" th:text="${hausseRuche.nbCadres}"></td>
+						<td class="num" th:text="${hausseRuche.nbCadresMax}"></td>
+						<td th:text="${hausseRuche.commentaire}"></td>
+					</tr>
+				</tbody>
+			</table>
 		</th:block>
 	</div>
 	<footer th:replace="include::footer"></footer>
