--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -88,7 +88,7 @@
 <script th:fragment="jspdf" th:src="@{/js/jspdf-2.5.1.umd.min.js}"></script>
 <script th:fragment="jsdatepicker-fr" th:src="@{/js/datepicker-fr.js}"></script>
 
-<script th:fragment="jsChart" th:src="@{/js/chart.min-4.2.0.js}"></script>
+<script th:fragment="jsChart" th:src="@{/js/chart.umd-4.2.1.js}"></script>
 
 <link th:fragment="weather-icons" rel="stylesheet" type="text/css"
 	media="all"
