--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -43,6 +43,9 @@ $(document).ready(function() {
 				<tr>
 					<th th:text="#{nom}"></th>
 					<th th:text="#{nbCadresMax}"></th>
+					
+					<th th:text="#{nbRuches}"></th>
+					
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
@@ -51,6 +54,9 @@ $(document).ready(function() {
 					<td><a th:href="@{'/rucheType/'+${rucheType.id}}"
 						th:text="*{rucheType.nom}"></a></td>
 					<td class="num" th:text="*{rucheType.nbCadresMax}"></td>
+					
+					<td class="num" th:text="${NbRuches[rucheTypeStat.index]}"></td>
+					
 					<td th:text="${rucheType.commentaire}"></td>
 				</tr>
 			</tbody>
